--- a/index.html
+++ b/index.html
@@ -3,11 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript</title>
+    <title>Getting Start with DOM</title>
 </head>
 <body>
-    <h1>Learning Javascript</h1>
-<script src="./script.js"></script>  
-  <!-- this refers to load the javascript file to load in browser  -->
+    <nav>
+<ul class="top-nav">
+    <li class="active">Home</li>
+    <li>Contact</li>
+    <li>About</li>
+    <li>Vision</li>
+</ul>
+    </nav>
+<main>
+<div>
+    <h1>Hello World</h1>
+</div>
+<div>
+    <h5>Document Obeject Model</h5>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit accusamus ab, pariatur earum necessitatibus cupiditate impedit incidunt, vero quo dolorem quam sed debitis. Culpa placeat tempore obcaecati hic repellat voluptate.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa aut quidem enim facere molestias doloribus itaque tempora, molestiae quos dolore sapiente provident animi officia repudiandae beatae possimus eligendi voluptas perferendis.</p>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt exercitationem dolorem fugit, et aut eligendi voluptatibus aliquam distinctio earum illum, explicabo odio amet est repudiandae animi odit voluptatem ipsum iusto! Culpa et <a href="">link</a> earum mollitia vero quibusdam, facilis aliquid cum fuga, dolorum qui tempore autem nobis voluptatem impedit molestiae expedita labore nesciunt nulla incidunt maxime itaque? Autem quisquam id veniam doloribus.
+    </p>
+    <h3 class="brand">BloggingHindi</h3>
+</div>
+</main>
+    
+<footer></footer>
+<script src="./script.js"></script>
 </body>
 </html>
